<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainTicket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quit">退出</string>
    <string name="serach_train">列车查询</string>
    <string name="my_order">订单查询</string>
    <string name="my12306">我的12306</string>
    <string name="has_more">更多</string>
    <string name="from_station_text">出发地:</string>
    <string name="to_station_text">目的地:</string>

</resources>