<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ckt.trainticket.MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/serach_train"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/buttom_bar"
            android:text="@string/serach_train"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/my_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/buttom_bar"
            android:text="@string/my_order"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/my12306"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/buttom_bar"
            android:text="@string/my12306"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/has_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
             android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/buttom_bar"
            android:text="@string/has_more" />
    </LinearLayout>

</RelativeLayout>